perf(exam-term-setup): eager joins and batch count queries for terms and setups